fixed carousel white stripe issue and slide wont work on IE9 problem close #1 close #2

--- a/sass/_application.scss
+++ b/sass/_application.scss
@@ -77,6 +77,7 @@
 #skillSlide {
   padding: 10px 31px;
   border: 1px solid #ddd;
+  width: 498px;
   @include box-shadow(rgba(0,0,0,0.3) 0px 7px 20px -2px);
 }
 
